--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,28 +1,30 @@
 build: false
 platform:
   - x64
-clone_folder: c:\projects\php-api-client
-
+clone_folder: c:\projects\php-project-workspace
 
 ## Build matrix for lowest and highest possible targets
 environment:
   matrix:
   - dependencies: lowest
-    php_ver: 7.0.9
+    php_ver_target: 7.0
+  - dependencies: lowest
+    php_ver_target: 7.1
   - dependencies: current
-    php_ver: 7.0.9
+    php_ver_target: 7.0
+  - dependencies: current
+    php_ver_target: 7.1
   - dependencies: highest
-    php_ver: 7.0.9
+    php_ver_target: 7.0
+  - dependencies: highest
+    php_ver_target: 7.1
 
-## Cache composer bits
+## Cache composer, chocolatey and php bits
 cache:
-    - c:\tools\php -> appveyor.yml
-    - c:\projects\php-api-client\vendor -> composer.lock
     - '%LOCALAPPDATA%\Composer\files -> composer.lock'
 
 ## Set up environment varriables
 init:
-    - SET COMPOSER_ROOT_VERSION=dev-master ## Temporary until we tag first versions
     - SET PATH=C:\Program Files\OpenSSL;c:\tools\php;%PATH%
     - SET COMPOSER_NO_INTERACTION=1
     - SET PHP=1
@@ -31,8 +33,7 @@ init:
 ## Install PHP and composer, and run the appropriate composer command
 install:
     - IF EXIST c:\tools\php (SET PHP=0)
-    - IF %PHP%==1 appveyor-retry cinst -y OpenSSL.Light
-    - IF %PHP%==1 appveyor-retry cinst -y php --version %php_ver%
+    - ps: appveyor-retry cinst --params '""/InstallDir:C:\tools\php""' --ignore-checksums -y php --version ((choco search php --exact --all-versions -r | select-string -pattern $env:php_ver_target | sort { [version]($_ -split '\|' | select -last 1) } -Descending | Select-Object -first 1) -replace '[php|]','')
     - cd c:\tools\php
     - IF %PHP%==1 copy php.ini-production php.ini /Y
     - IF %PHP%==1 echo date.timezone="UTC" >> php.ini
@@ -42,13 +43,13 @@ install:
     - IF %PHP%==1 echo extension=php_fileinfo.dll >> php.ini
     - IF %PHP%==1 echo @php %%~dp0composer.phar %%* > composer.bat
     - appveyor-retry appveyor DownloadFile https://getcomposer.org/composer.phar
-    - cd c:\projects\php-api-client
-    - IF %dependencies%==lowest appveyor-retry composer update --prefer-lowest --no-progress -n
-    - IF %dependencies%==current appveyor-retry composer install --no-progress
-    - IF %dependencies%==highest appveyor-retry composer update --no-progress -n
+    - cd c:\projects\php-project-workspace
+    - IF %dependencies%==lowest appveyor-retry composer update --prefer-lowest --no-progress --profile -n
+    - IF %dependencies%==current appveyor-retry composer install --no-progress --profile
+    - IF %dependencies%==highest appveyor-retry composer update --no-progress --profile -n
     - composer show
 
 ## Run the actual test
 test_script:
-    - cd c:\projects\php-api-client
+    - cd c:\projects\php-project-workspace
     - vendor/bin/phpunit -c phpunit.xml.dist
