Drop namespace requirement
We're now using `wyrihaximus/list-classes-in-directory` to get all classes from a directory

--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,11 @@
   "require": {
     "php": "^7.2",
     "doctrine/annotations": "^1.6",
-    "wyrihaximus/doctrine-annotation-autoloader": "^1.0"
+    "wyrihaximus/doctrine-annotation-autoloader": "^1.0",
+    "wyrihaximus/list-classes-in-directory": "dev-master"
   },
   "require-dev": {
-    "api-clients/test-utilities": "^5.0"
+    "api-clients/test-utilities": "^5.1"
   },
   "autoload": {
     "psr-4": {
